# scouting-app

./: .gitignore  Cargo.toml  README.md  index.html  package.json  tslint.json
migrations/: down.sql  up.sql
src/: app.ts  client_coms.rs  create_example_competition.rs  game.json  main.rs  models.rs  schema.rs
